--- a/CSS - My Site/css/style.css
+++ b/CSS - My Site/css/style.css
@@ -1,41 +1,56 @@
 body {
     background-color:    #beebe9;
-    margin: 0;
-
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 
-h1{
-    margin-top: 0;
+.header_name {
+    font-family: cursive;     
+    margin: 50px auto 0 auto;
+    font-size: 5.625rem;
+    color: #66BFBF;
 }
-/* ------------------------ */
+
+.header_programer {
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
+}
+
 .top-container {
-    background-color: cornflowerblue;
-    width: 200px;
-    height: 200px;
-    border: solid 10px;
-    padding: 20px;
-}
-
-/* ------------------------ */
-
-.middle-container {
-    background-color: red;
-    margin: 0 0 0 260px;
-    width: 200px;
-    height: 200px;
-    border: solid 10px;
-    padding: 20px;
 
 }
 
-/* ------------------------ */
 
-.bottom-container {
-    background-color: blue;
-    margin: 0 0 0 520px;
-    width: 200px;
-    height: 200px;
-    border: solid 10px;
-    padding: 20px;
+.pro{
+    display: inline; 
+    text-decoration: underline;
+}
 
+
+.upper-cloud {
+  margin: 20px 0 0 60%;
+display: block;
+
+}
+
+.bottom-cloud {
+    margin: 0 0 0 30%;
+    display: block;
+
+}
+
+.bus {
+    width:  100px;
+    height: 100px;
+    border-radius: 100%;
+    border: dashed;
+}
+
+h3 {
+    color: #11999E;
+}
+
+a{
+    color: #11999E;
 }
