clear and insert params table

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -56,7 +56,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
             <ul class="navbar-nav ml-auto">
-                
+
               <li class="nav-item active">
                 <a class="nav-link" href="Function_Definition">Define</a>
               </li>
@@ -211,7 +211,7 @@
                   </div>
 
             </div>
-                  
+
 
               <div class="input-groups-data col-2">
                     <label for="GroupsList">Groups</label>
@@ -251,7 +251,7 @@
                 <label>Inputs:</label>
                 <i class="fas fa-plus-circle ml-auto"></i>
 
-                <table class="table table-hover">
+                <table class="table table-hover" name="function_parameters">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
@@ -296,7 +296,7 @@
                         <td>DataFrame</td>
                         <td><i class="far fa-trash-alt"></i></td>
                       </tr>
-                      
+
                     </tbody>
                   </table>
 
@@ -309,11 +309,11 @@
             <div class="row card-body main-form-card-body">
                 <div>
                     <h5 class="mb-2">Function Oper Line:</h5>
-                        <h5 class="oper_line">your_function(param1, param2, ...., paramN)</h5>                
+                        <h5 class="oper_line">your_function(param1, param2, ...., paramN)</h5>
                     </div>
             </div>
         </div>
-            
+
     </section>
 
     <section id = "Tree">
@@ -321,7 +321,7 @@
             <div class="row card-body main-form-card-body">
                 <h4>Tree</h4>
                 <div class="mx-auto">
-                
+
                 <div class="tree">
                     <h5 class="ml-3">#N223</h5>
                     <div class="row">
@@ -329,10 +329,10 @@
                         <i class="fas fa-plus-circle add-icon-tree"></i>
                         <i class="far fa-trash-alt trash-icon-tree"></i>
                     </div>
-                    
+
                 </div>
             </div>
-            </div>  
+            </div>
         </div>
     </section>
 
@@ -340,4 +340,3 @@
     <script src="../static//js/Functions_Definitions.js"></script>
   </body>
 </html>
-
