starting sending data to server

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -81,7 +81,7 @@
             src="{{url_for('static',filename='icons/magic-wand.png')}}"
             alt="Card image cap"
           /></a>
-          <a role="button" href="#" class="fix-buttons-ancor"><img
+          <a role="button" href="#" class="fix-buttons-ancor" name="save_function_button"><img
             class="card-img-top img-responsive"
             src="{{url_for('static',filename='icons/save.png')}}"
             alt="Card image cap"
