Added DbConnector Helper Class and DbConnections Model class.

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -65,6 +65,9 @@
                 <a class="nav-link" href="Function_Analysis">Run</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="run_simple">Run Demo</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href=""> Results</a>
               </li>
             </ul>
