--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -13,6 +13,19 @@
         <br>
         <br>
     </div>
+
+    <div>
+        <label for="database_select">select a db</label>
+        <select name="databases" id="database_select">
+            <option value="">POSTGRESQL</option>
+            <option value="">MYSQL</option>
+            <option value="">SQLITE</option>
+            <option value="">ORACLE</option>
+        </select>
+        <br>
+        <br>
+    </div>
+
     <div>
         <label for="run_ids_select">select a run id</label>
         <select name="run_ids" id="run_ids_select">
