handeling params table

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -265,7 +265,14 @@
                     <tbody>
                       <tr>
                         <th scope="row">1</th>
-                        <td>Sys Params</td>
+                        <!-- <td>Sys Params</td> -->
+                        <td>
+                          <select id="MykindsDown">
+                              <option value="0">Google</option>
+                              <option value="1">Bing</option>
+                              <option value="2">Yahoo</option>
+                          </select>
+                        <td>
                         <td> --- </td>
                         <td>Table</td>
                         <td><i class="far fa-trash-alt"></i></td>
