fixed connection timeout. handeling engine disposal

--- a/Source/templates/db_conn_wizard.html
+++ b/Source/templates/db_conn_wizard.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Define New Connection</h1>
     <label for="db_type">Type</label>
     <select type="text" id="db_type">
         <option value="POSTGRESQL">POSTGRESQL</option>
@@ -37,10 +38,10 @@
     <br>
     <hr>
     <br>
-
+    <h1>Existing Connections</h1>
     <select name="current_connections" id="current_connections"></select>
     <br>
-    <label for="disp_name">Type: </label>
+    <label for="disp_name">Name: </label>
     <text id="disp_name"></text>
     <br>
     <label for="disp_db_type">Type: </label>
