params funciton data

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -26,7 +26,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
-    <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" /> -->
+    <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
     <link rel="stylesheet" href="../static/css/styles.css" />
   </head>
   <body>
@@ -219,7 +219,7 @@
 
               <div class="input-groups-data col-2">
                     <label for="GroupsList">Groups</label>
-                  <ul id="GroupsList">
+                    <ul id="GroupsList">
                     <li>group1</li>
                     <li>group2</li>
                     <li>group3</li>
@@ -255,7 +255,7 @@
                 <label>Inputs:</label>
                 <i class="fas fa-plus-circle ml-auto"></i>
 
-                <table class="table table-hover" name="function_parameters">
+                <table  class="table table-hover" name="function_parameters">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
