added user sessions - now all users has thier own session data

--- a/Source/static/css/layout_style.css
+++ b/Source/static/css/layout_style.css
@@ -7,8 +7,17 @@
 .octopus-img {
     width: 8%;
   }
-  
-  .nav-item {
-    text-align: center;
-    margin: 0 10px 0;
-  }
+
+h6 {
+    display: inline-block;
+}
+
+.nav-item {
+  text-align: center;
+  margin: 0 10px 0;
+}
+
+#brand-image {
+  max-width:10%;
+}
+
