--- a/Source/templates/display_results.html
+++ b/Source/templates/display_results.html
@@ -3,13 +3,34 @@
 
 {%block content%}
 
-<br>
+<hr>
 <br>
 <br>
 <br>
 <label for="mission_id">select mission id:</label>
 <select id="mission_id_select"></select>
 <button id='display_button'>display</button>
+
+<br>
+<br>
+<hr>
+
+<div id="results_table_div" >
+    <table id="results_table">
+        <tr>
+            <th>hi</th>
+            <th>bye</th>
+            <th>nay</th>
+        </tr>
+        <tr>
+            <td>hi</td>
+            <td>bye</td>
+            <td>nay</td>
+        </tr>
+    </table>
+
+</div>
+
 {% endblock %}
 
 {%block scripts%}
