user wizard - save only

--- a/Source/templates/user_wizard.html
+++ b/Source/templates/user_wizard.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-5">
             <label for="max_priority">Max Priority</label>
-            <input class="form-control" type="text" id="max_priority" />
+            <input class="form-control" type="number" id="max_priority" />
         </div>
     </div>
     
@@ -48,8 +48,8 @@
     <h1>Existing Users</h1>
     <div class="row">
         <div class="col-10">
-            <label for="current_connections">Choose:</label>
-            <select class="form-control success-outline" name="current_connections" id="current_connections"></select>
+            <label for="user_select">Choose:</label>
+            <select class="form-control success-outline" name="current_connections" id="user_select"></select>
         </div>
     </div>
     <div class="row">
@@ -80,7 +80,7 @@
         </div>
         <div class="col-5">
             <label for="disp_max_priority">Max Priority </label>
-            <text class="form-control" id="disp_max_priority"></text>
+            <input type="number" class="form-control" id="disp_max_priority"></input>
         </div>
     </div>
     <input class="btn btn-lg btn-success mt-4" type="button" value="Save Changes" id="save_changes_button" />
