added drill down

--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -87,9 +87,15 @@
 <br />
 <hr />
 
-<div id="results_table_div">
+<div id="results_table_div" class="ml-4">
   <table id="results_table">
   </table>
+</div>
+<br>
+<br>
+<div id="drill_down_div">
+    <table id="drill_down_table">
+    </table>
 </div>
 <br>
 <br>
