--- a/Source/templates/user_wizard.html
+++ b/Source/templates/user_wizard.html
@@ -54,6 +54,12 @@
     </div>
     <div class="row">
         <div class="col-5">
+            <label for="disp_nick_name">Nick Name</label>
+            <text class="form-control" id="disp_nick_name"></text>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-5">
             <label for="disp_first_name">First Name</label>
             <text class="form-control" id="disp_first_name"></text>
         </div>
