--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -93,8 +93,28 @@
 </div>
 <br>
 <br>
-<div id="drill_down_div">
+<div id="drill_down_div" class="container results_divs">
+    <h1 id="drill_down_header"></h1>
+    <h2 id="drill_down_db_name"></h2>
+    
+    <div class="row col-10">
+        <div class="results_divs col-5 m-2">
+            <h2 id="drill_down_function_name"></h2>
+        </div>
+        <div class="results_divs col-5 m-2">
+            <h2 id="drill_down_run_id"></h2>
+        </div>
+    </div>
+    <div class="row col-10">
+        <div class="results_divs col-5 m-2">
+            <h2 id="result_status"></h2>
+        </div>
+        <div class="results_divs col-5 m-2">
+            <h2 id="result_text"></h2>
+        </div>
+    </div>
     <table id="drill_down_table">
+    
     </table>
 </div>
 <br>
