added user update and delete

--- a/Source/templates/user_wizard.html
+++ b/Source/templates/user_wizard.html
@@ -48,16 +48,16 @@
     <h1>Existing Users</h1>
     <div class="row">
         <div class="col-10">
-            <label for="user_select">Choose:</label>
+            <label for="user_select">Nick Names:</label>
             <select class="form-control success-outline" name="current_connections" id="user_select"></select>
         </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-5">
             <label for="disp_nick_name">Nick Name</label>
             <text class="form-control" id="disp_nick_name"></text>
         </div>
-    </div>
+    </div> -->
     <div class="row">
         <div class="col-5">
             <label for="disp_first_name">First Name</label>
@@ -90,7 +90,8 @@
         </div>
     </div>
     <input class="btn btn-lg btn-success mt-4" type="button" value="Save Changes" id="save_changes_button" />
-    <input class="btn btn-lg btn-danger mt-4 mr-auto" type="button" value="Reset Password" id="reset_password_button" />
+    <input class="btn btn-lg btn-warning mt-4 mr-auto" type="button" value="Reset Password" id="reset_password_button" />
+    <input class="btn btn-lg btn-danger mt-4 mr-auto" type="button" value="Delete" id="delete_user_button" />
 
   </div>
 </div>
